--- a/index.html
+++ b/index.html
@@ -1,154 +1,142 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <title>مركز الشريف للخدمات في تركيا</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <style>
-        body {
-            font-family: Tahoma, Arial, sans-serif;
-            background-color: #f4f6f8;
-            margin: 0;
-            padding: 0;
-            color: #222;
-        }
-        .container {
-            max-width: 900px;
-            margin: auto;
-            background: #ffffff;
-            padding: 25px;
-        }
-        h1 {
-            text-align: center;
-            color: #0b3c5d;
-            margin-bottom: 10px;
-        }
-        h2 {
-            color: #1d6fa5;
-            border-bottom: 2px solid #e0e0e0;
-            padding-bottom: 6px;
-        }
-        p {
-            line-height: 1.8;
-            font-size: 15px;
-        }
-        ul {
-            padding-right: 20px;
-        }
-        li {
-            margin-bottom: 8px;
-        }
-        .section {
-            margin-bottom: 35px;
-        }
-
-        /* زر واتساب */
-        .whatsapp-box {
-            background: #0b3c5d;
-            color: #fff;
-            padding: 25px;
-            text-align: center;
-            margin-top: 40px;
-            border-radius: 6px;
-        }
-        .whatsapp-box a {
-            background: #25D366;
-            color: #fff;
-            padding: 14px 24px;
-            text-decoration: none;
-            font-size: 16px;
-            font-weight: bold;
-            border-radius: 6px;
-            display: inline-block;
-            margin-top: 15px;
-        }
-
-        .footer {
-            text-align: center;
-            font-size: 13px;
-            color: #777;
-            margin-top: 25px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>مركز الشريف للخدمات في تركيا</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: Tahoma, Arial;
+      background: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background: #0b2a4a;
+      color: #fff;
+      padding: 30px 15px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 26px;
+    }
+    header p {
+      margin-top: 10px;
+      font-size: 15px;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+    }
+    .section {
+      background: #fff;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 8px;
+    }
+    .section h2 {
+      color: #0b2a4a;
+      margin-bottom: 10px;
+    }
+    ul {
+      padding-right: 20px;
+    }
+    ul li {
+      margin-bottom: 8px;
+    }
+    .whatsapp-main {
+      display: block;
+      background: #25D366;
+      color: #fff;
+      text-align: center;
+      padding: 15px;
+      margin: 25px auto;
+      width: 90%;
+      max-width: 400px;
+      border-radius: 50px;
+      font-size: 18px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25D366;
+      color: #fff;
+      width: 55px;
+      height: 55px;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 55px;
+      font-size: 30px;
+      text-decoration: none;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      font-size: 13px;
+      color: #777;
+    }
+  </style>
 </head>
 
 <body>
 
+<header>
+  <h1>مركز الشريف للخدمات في تركيا</h1>
+  <p>خدمات واستشارات متكاملة للأجانب داخل تركيا بمتابعة حقيقية حتى إتمام الخدمة</p>
+</header>
+
+<a class="whatsapp-main" href="https://wa.me/201005039016" target="_blank">
+📞 تواصل معنا عبر واتساب الآن
+</a>
+
 <div class="container">
 
-    <h1>مركز الشريف للخدمات في تركيا</h1>
+  <div class="section">
+    <h2>🛂 خدمات الإقامة في تركيا</h2>
+    <p>نساعدك في استخراج وتجديد جميع أنواع الإقامات بسهولة وبدون تعقيد.</p>
+    <ul>
+      <li>حجز الموعد الإلكتروني لجميع الولايات</li>
+      <li>تجهيز الأوراق ومتابعة الإجراءات حتى استلام الإقامة</li>
+      <li>الإقامة السياحية</li>
+      <li>الإقامة العقارية</li>
+      <li>الإقامة العائلية</li>
+      <li>إقامة الطالب</li>
+      <li>الإقامة الدائمة</li>
+    </ul>
+  </div>
 
-    <div class="section">
-        <p>
-            نقدم خدمات واستشارات متكاملة للأجانب في تركيا  
-            بخبرة عملية ومتابعة دقيقة لتسهيل جميع الإجراءات الرسمية  
-            بطريقة قانونية وآمنة وموثوقة.
-        </p>
-    </div>
+  <div class="section">
+    <h2>🛡️ خدمات التأمين في تركيا</h2>
+    <ul>
+      <li>استخراج التأمين الصحي</li>
+      <li>استخراج التأمين السياحي</li>
+      <li>تأمين العقارات ضد الزلازل والكوارث الطبيعية</li>
+      <li>تأمين السيارات</li>
+    </ul>
+  </div>
 
-    <div class="section">
-        <h2>خدمات الإقامات في تركيا</h2>
-        <ul>
-            <li>حجز الموعد الإلكتروني لجميع الولايات التركية</li>
-            <li>تجهيز الأوراق ومتابعة الإجراءات حتى استلام الإقامة</li>
-            <li>استخراج وتجديد جميع أنواع الإقامات:</li>
-            <ul>
-                <li>الإقامة السياحية</li>
-                <li>الإقامة العقارية</li>
-    
-                <li>إقامة الطالب</li>
-                <li>الإقامة العائلية</li>
-            </ul>
-        </ul>
-    </div>
+  <div class="section">
+    <h2>💸 التحويلات المالية مصر ⇄ تركيا</h2>
+    <p>تحويلات مالية فورية لحظية وآمنة بأسعار تنافسية.</p>
+  </div>
 
-    <div class="section">
-        <h2>خدمات التأمين في تركيا</h2>
-        <ul>
-            <li>استخراج التأمين الصحي للأجانب</li>
-            <li>استخراج التأمين السياحي للمسافرين</li>
-            <li>استخراج تأمين العقارات ضد الزلازل والكوارث الطبيعية</li>
-            <li>استخراج تأمين السيارات</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>التحويلات المالية (مصر ⇄ تركيا)</h2>
-        <p>
-            تحويلات مالية فورية لحظية  
-            بسرعة تنفيذ ومتابعة حتى تمام الاستلام.
-        </p>
-        <ul>
-            <li>تحويلات فورية لحظية</li>
-            <li>تحويلات شخصية وعائلية</li>
-            <li>دعم مباشر وسريع</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>الخدمات التعليمية</h2>
-        <ul>
-            <li>التقديم على القبولات الجامعية في تركيا (خدمة مجانية)</li>
-        </ul>
-    </div>
-
-    <!-- واتساب مدمج داخل الصفحة -->
-    <div class="whatsapp-box">
-        <h2>التواصل المباشر</h2>
-        <p>للاستفسار والتواصل الفوري اضغط على الزر</p>
-
-        <a href="https://wa.me/201005039016?text=مرحباً،%20أرغب%20في%20الاستفسار%20عن%20خدمات%20مركز%20الشريف"
-           target="_blank">
-            تواصل معنا عبر واتساب
-        </a>
-    </div>
-
-    <div class="footer">
-        © جميع الحقوق محفوظة – مركز الشريف للخدمات
-    </div>
+  <div class="section">
+    <h2>🎓 القبولات الجامعية</h2>
+    <p>خدمة التقديم على القبولات الجامعية في تركيا <strong>مجانًا</strong>.</p>
+  </div>
 
 </div>
+
+<footer>
+  © مركز الشريف للخدمات – تركيا
+</footer>
+
+<a class="whatsapp-float" href="https://wa.me/201005039016" target="_blank">💬</a>
 
 </body>
 </html>
