--- a/index.html
+++ b/index.html
@@ -2,83 +2,92 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>مركز الشريف للخدمات في تركيا</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>مركز الشريف للخدمات في تركيا</title>
+
   <style>
     body {
       margin: 0;
-      font-family: Tahoma, Arial;
-      background: #f9f9f9;
+      font-family: Tahoma, Arial, sans-serif;
+      background-color: #f4f6f8;
       color: #333;
+      line-height: 1.8;
     }
+
     header {
-      background: #0b2a4a;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
       color: #fff;
-      padding: 30px 15px;
+      padding: 50px 20px;
       text-align: center;
     }
+
     header h1 {
       margin: 0;
-      font-size: 26px;
+      font-size: 32px;
     }
+
     header p {
-      margin-top: 10px;
-      font-size: 15px;
+      margin-top: 15px;
+      font-size: 18px;
+      opacity: 0.95;
     }
+
+    .btn {
+      display: inline-block;
+      margin-top: 25px;
+      background-color: #25d366;
+      color: #fff;
+      padding: 14px 28px;
+      text-decoration: none;
+      font-size: 18px;
+      border-radius: 8px;
+      font-weight: bold;
+    }
+
     .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
     }
+
     .section {
       background: #fff;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 8px;
+      margin-bottom: 30px;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
     }
+
     .section h2 {
-      color: #0b2a4a;
-      margin-bottom: 10px;
+      margin-top: 0;
+      color: #203a43;
+      border-right: 4px solid #2c5364;
+      padding-right: 10px;
     }
+
     ul {
       padding-right: 20px;
     }
-    ul li {
-      margin-bottom: 8px;
-    }
-    .whatsapp-main {
-      display: block;
-      background: #25D366;
-      color: #fff;
-      text-align: center;
-      padding: 15px;
-      margin: 25px auto;
-      width: 90%;
-      max-width: 400px;
-      border-radius: 50px;
-      font-size: 18px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .whatsapp-float {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #25D366;
-      color: #fff;
-      width: 55px;
-      height: 55px;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 55px;
-      font-size: 30px;
-      text-decoration: none;
-    }
+
     footer {
+      background: #203a43;
+      color: #fff;
       text-align: center;
-      padding: 15px;
-      font-size: 13px;
-      color: #777;
+      padding: 20px;
+      font-size: 14px;
+    }
+
+    footer span {
+      opacity: 0.8;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 26px;
+      }
+      header p {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
@@ -87,56 +96,72 @@
 
 <header>
   <h1>مركز الشريف للخدمات في تركيا</h1>
-  <p>خدمات واستشارات متكاملة للأجانب داخل تركيا بمتابعة حقيقية حتى إتمام الخدمة</p>
+  <p>خدمات واستشارات متكاملة للأجانب في تركيا بأسلوب رسمي وواضح</p>
+  <a class="btn" href="https://wa.me/201005039016" target="_blank">تواصل معنا عبر واتساب</a>
 </header>
-
-<a class="whatsapp-main" href="https://wa.me/201005039016" target="_blank">
-📞 تواصل معنا عبر واتساب الآن
-</a>
 
 <div class="container">
 
   <div class="section">
-    <h2>🛂 خدمات الإقامة في تركيا</h2>
-    <p>نساعدك في استخراج وتجديد جميع أنواع الإقامات بسهولة وبدون تعقيد.</p>
+    <h2>لماذا مركز الشريف؟</h2>
     <ul>
-      <li>حجز الموعد الإلكتروني لجميع الولايات</li>
+      <li>خبرة في التعامل مع ملفات الأجانب داخل تركيا</li>
+      <li>متابعة الإجراءات خطوة بخطوة حتى الانتهاء</li>
+      <li>وضوح كامل في المتطلبات بدون وعود غير حقيقية</li>
+      <li>تواصل مباشر وسريع عبر واتساب</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>خدمات الإقامات في تركيا</h2>
+    <ul>
+      <li>حجز المواعيد الإلكترونية لجميع الولايات التركية</li>
       <li>تجهيز الأوراق ومتابعة الإجراءات حتى استلام الإقامة</li>
       <li>الإقامة السياحية</li>
       <li>الإقامة العقارية</li>
-      <li>الإقامة العائلية</li>
       <li>إقامة الطالب</li>
+      <li>الإقامة العائلية</li>
       <li>الإقامة الدائمة</li>
     </ul>
   </div>
 
   <div class="section">
-    <h2>🛡️ خدمات التأمين في تركيا</h2>
+    <h2>خدمات التأمين في تركيا</h2>
     <ul>
       <li>استخراج التأمين الصحي</li>
-      <li>استخراج التأمين السياحي</li>
+      <li>التأمين السياحي للمسافرين</li>
       <li>تأمين العقارات ضد الزلازل والكوارث الطبيعية</li>
       <li>تأمين السيارات</li>
     </ul>
   </div>
 
   <div class="section">
-    <h2>💸 التحويلات المالية مصر ⇄ تركيا</h2>
-    <p>تحويلات مالية فورية لحظية وآمنة بأسعار تنافسية.</p>
+    <h2>التحويلات المالية (مصر ⇄ تركيا)</h2>
+    <ul>
+      <li>تحويلات مالية فورية لحظية</li>
+      <li>متابعة دقيقة حتى تأكيد الاستلام</li>
+    </ul>
   </div>
 
   <div class="section">
-    <h2>🎓 القبولات الجامعية</h2>
-    <p>خدمة التقديم على القبولات الجامعية في تركيا <strong>مجانًا</strong>.</p>
+    <h2>القبولات الجامعية</h2>
+    <ul>
+      <li>التقديم على القبولات الجامعية مجانًا</li>
+      <li>إرشاد الطالب للخيارات المناسبة</li>
+    </ul>
+  </div>
+
+  <div class="section" style="text-align:center;">
+    <a class="btn" href="https://wa.me/201005039016" target="_blank">
+      تواصل معنا الآن
+    </a>
   </div>
 
 </div>
 
 <footer>
-  © مركز الشريف للخدمات – تركيا
+  <span>© مركز الشريف للخدمات في تركيا</span>
 </footer>
-
-<a class="whatsapp-float" href="https://wa.me/201005039016" target="_blank">💬</a>
 
 </body>
 </html>
